@@ -16,6 +16,18 @@ namespace LHAPDF {
   class AlphaS {
   public:
 
+    AlphaS() {
+      _qmasses[0] = 0.0017;
+      _qmasses[1] = 0.0041;
+      _qmasses[2] = 0.1;
+      _qmasses[3] = 1.29;
+      _qmasses[4] = 4.1;
+      _qmasses[5] = 172.5;
+
+      _mz = 91.1876;
+      _alphas_mz = 0.118;
+    }
+
     double alphaS_Q(double q) { return alphaS_Q2(q*q); }
     virtual double alphaS_Q2(double q2) = 0;
 
@@ -24,14 +36,26 @@ namespace LHAPDF {
     /// Calculate the number of active flavours at energy scale Q2
     int _nf_Q2(double q2);
 
-    /// Calculate beta functions given the number of active flavours
+    /// Calculate the i'th beta function given the number of active flavours
     ///
-    /// Avoid copying the vector: return by const ref, or just return individual
-    /// doubles with an extra index argument?
+    /// Currently limited to 0 <= i <= 2.
+    double beta(int i, int nf);
+
+    /// Calculate a vector of beta functions given the number of active flavours
+    ///
+    /// Currently returns a 3-element vector of beta0 -- beta2.
     std::vector<double> betas(int nf);
 
+    /// Masses of quarks in GeV.  Used to calculate the number of quarks that are active at a given energy range Q2
+    double _qmasses[6];
+
+    /// Mass of the Z-boson and value of alpha_s(MZ)
     double _mz,_alphas_mz;
+
+    /// LambdaQCD values for 4 and 5 flavour regimes
     double _lambda4, _lambda5;
+
+    /// Order of QCD (expressed as number of loops)
     int _order;
 
   };
@@ -61,13 +85,14 @@ namespace LHAPDF {
 
 
 
-  /// Interpolate alpha_s from points in Q2
-  class AlphaS_Ipol : public AlphaS {
-  public:
+  /// @todo Complete and re-enable
+  // /// Interpolate alpha_s from points in Q2
+  // class AlphaS_Ipol : public AlphaS {
+  // public:
 
-    double alphaS_Q2(double q2);
+  //   double alphaS_Q2(double q2);
 
-  };
+  // };
 
 
 }
