@@ -4,7 +4,8 @@ libLHAPDF_la_SOURCES = \
   GridPDF.cc Info.cc Paths.cc \
   BicubicInterpolator.cc BilinearInterpolator.cc \
   ErrExtrapolator.cc NearestPointExtrapolator.cc \
-  AlphaS.cc Factories.cc
+  AlphaS.cc AlphaS_Analytic.cc AlphaS_ODE.cc \
+  Factories.cc
 
 if ENABLE_LHAGLUE
   libLHAPDF_la_SOURCES += LHAGlue.cc
